--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -65,6 +65,7 @@
   --ui-color-input-placeholder-disabled:var(--ui-color-gray-20);
 
   /* form control: hover & focused */
+  --ui-color-input-surface-active:var(--ui-color-gray-25);
   --ui-color-input-outline-active:var(--ui-color-gray-60);
   --ui-color-input-icons-active:var(--ui-color-gray-90);
 
@@ -74,7 +75,7 @@
   --ui-form-control-size-large:40px;
 
   /* form control: status colors */
-  --ui-color-form-control-info:oklch(65.14% 0.226 259.61);
+  --ui-color-form-control-accent:oklch(65.14% 0.226 259.61);
   --ui-color-form-control-error:oklch(59.21% 0.233 27.07);
   --ui-color-form-control-success:oklch(70.25% 0.174 149.61);
   --ui-color-form-control-warning:oklch(81.32% 0.183 79.64);
