--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -26,6 +26,13 @@
   --ui-font-size-large:18px;
   --ui-font-size-x-large:20px;
 
+  /* ui sizes */
+  --ui-size-x-small:16px;
+  --ui-size-small:24px;
+  --ui-size-medium:32px;
+  --ui-size-large:40px;
+  --ui-size-x-large:48px;
+
   /* border radius */
   --ui-border-radius-square:none;
   --ui-border-radius-rounded:6px;
@@ -50,35 +57,32 @@
   /* theme: scrollbar */
   --ui-color-scrollbar:var(--ui-color-gray-70);
 
-  /* === form control === */
+  /* === form === */
   /* form control: default */
-  --ui-color-input-surface:var(--ui-color-gray-20);
-  --ui-color-input-outline:var(--ui-color-gray-30);
-  --ui-color-input-content:var(--ui-color-gray-90);
-  --ui-color-input-icons:var(--ui-color-gray-60);
-  --ui-color-input-placeholder:var(--ui-color-gray-50);
-
-  /* form control: disabled */
-  --ui-color-form-control-surface-disabled:var(--ui-color-gray-60);
-  --ui-color-form-control-outline-disabled:transparent;
-  --ui-color-form-control-content-disabled:var(--ui-color-gray-20);
-  --ui-color-form-control-placeholder-disabled:var(--ui-color-gray-20);
+  --ui-color-form-surface:var(--ui-color-gray-20);
+  --ui-color-form-outline:var(--ui-color-gray-30);
+  --ui-color-form-content:var(--ui-color-gray-80);
+  --ui-color-form-icons:var(--ui-color-gray-60);
+  --ui-color-form-placeholder:var(--ui-color-gray-50);
 
   /* form control: hover & focused */
-  --ui-color-input-surface-active:var(--ui-color-gray-25);
-  --ui-color-input-outline-active:var(--ui-color-gray-60);
-  --ui-color-input-icons-active:var(--ui-color-gray-90);
+  --ui-color-form-surface-active:var(--ui-color-gray-25);
+  --ui-color-form-outline-active:var(--ui-color-gray-60);
+  --ui-color-form-icons-active:var(--ui-color-gray-90);
 
-  /* form control: sizes */
-  --ui-form-control-size-small:24px;
-  --ui-form-control-size-medium:32px;
-  --ui-form-control-size-large:40px;
+  /* form control: disabled */
+  --ui-color-form-surface-disabled:var(--ui-color-gray-60);
+  --ui-color-form-outline-disabled:transparent;
+  --ui-color-form-content-disabled:var(--ui-color-gray-20);
+  --ui-color-form-placeholder-disabled:var(--ui-color-gray-20);
+
+
 
   /* form control: status colors */
-  --ui-color-form-control-accent:oklch(65.14% 0.226 259.61);
-  --ui-color-form-control-error:oklch(59.21% 0.233 27.07);
-  --ui-color-form-control-success:oklch(70.25% 0.174 149.61);
-  --ui-color-form-control-warning:oklch(81.32% 0.183 79.64);
+  --ui-color-form-accent:oklch(65.14% 0.226 259.61);
+  --ui-color-form-error:oklch(59.21% 0.233 27.07);
+  --ui-color-form-success:oklch(70.25% 0.174 149.61);
+  --ui-color-form-warning:oklch(81.32% 0.183 79.64);
 
   /* === transition === */
   --ui-transition-duration:0.2s;
